syntax = "proto3";

package terrainium.v1;

message ExecuteRequest {
  string session_id = 1;

  string terrain_name = 2;
  string biome_name = 3;
  string toml_path = 4;
  bool is_activate = 5;
  string timestamp = 6;

  Operation operation = 7;
  repeated Command commands = 8;
}

enum Operation {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_CONSTRUCTORS = 1;
  OPERATION_DESTRUCTORS = 2;
}

message Command {
  string exe = 1;
  repeated string args = 2;
  map<string, string> envs = 3;
  string cwd = 4;
}

message ExecuteResponse {
}
